--- a/src/views/components/input/input.css
+++ b/src/views/components/input/input.css
@@ -1,9 +1,18 @@
 .chat-input {
-  top: 798px;
+  position: absolute;
+  top: 885px;
   left: -1px;
-  height: 50px;
+  height: 60px;
   width: 1380px;
   border: 1px solid gray;
+}
+.chat-input::placeholder {
+  padding-left: 30px;
+  font-size: 20px;
+}
+.chat-input:focus {
+  outline: none;
+  text-align: left;
 }
 
 .profile-input {
