--- a/src/views/pages/chats/chats.scss
+++ b/src/views/pages/chats/chats.scss
@@ -40,7 +40,7 @@
     }
 
     .chat-area {
-        display: block;
+        display: none;
         position: absolute;
         top: 8px;
         left: 508px;
@@ -48,7 +48,27 @@
         width: 1400px;
         border: 1px solid chats_colors.$chats-border-color;
         background-color: main_colors.$back-color;
+
+        .chat-area-name {
+            display: block;
+            position: relative;
+            top: 55px;
+            left: 30px;
+            text-align: left;
+            font-size: 23px;
+            font-weight: bold;
+        }
+
+        .chat-last-time {
+            display: block;
+            position: relative;
+            top: 65px;
+            left: 30px;
+            text-align: left;
+            font-size: 20px;
+        }
     }
+    
 
     // .msg-in-chat {
     //     display: block;
