--- a/src/views/components/underButtonLink/underButtonLink.css
+++ b/src/views/components/underButtonLink/underButtonLink.css
@@ -1,3 +1,12 @@
+.profile-link {
+  display: block;
+  position: absolute;
+  top: 100px;
+  left: 20px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
 a {
   display: block;
   position: absolute;
