--- a/src/views/components/clickableText/clickableText.scss
+++ b/src/views/components/clickableText/clickableText.scss
@@ -1,6 +1,12 @@
-.load-file-text {
+.clickable-text {
     font-size: 10px;
     top: 120px;
     margin-left: 305px;
     cursor: pointer;
+}
+
+.create-chat-text {
+    font-size: 20px;
+    top: 570px;
+    left: 890px;
 }
