--- a/src/views/components/button/button.css
+++ b/src/views/components/button/button.css
@@ -27,4 +27,19 @@ button {
   background-color: #cec48d;
 }
 
+.button-creation-chat {
+  top: 70%;
+  left: 13%;
+  height: 20%;
+  width: 60%;
+  background-color: gray;
+}
+.button-creation-chat .button-name {
+  top: 34%;
+  left: 38%;
+  font-size: large;
+  font-weight: 600;
+  color: white;
+}
+
 /*# sourceMappingURL=button.css.map */
