--- a/src/views/components/chat/chat.css
+++ b/src/views/components/chat/chat.css
@@ -1,7 +1,7 @@
 .chat {
   display: block;
   position: relative;
-  top: 90px;
+  top: 10%;
   width: 500px;
   height: 86px;
   border-top: 1px solid gray;
