--- a/src/views/components/button/button.css
+++ b/src/views/components/button/button.css
@@ -27,6 +27,20 @@ button {
   background-color: #cec48d;
 }
 
+.auth-button-name {
+  top: 35%;
+  left: 40%;
+  font-size: 100%;
+}
+
+.register-button-name {
+  left: 18%;
+}
+
+.settings-button-name {
+  left: 32%;
+}
+
 .button-creation-chat {
   top: 70%;
   left: 13%;
