--- a/src/views/components/button/button.scss
+++ b/src/views/components/button/button.scss
@@ -49,13 +49,45 @@ button {
     left: 13%;
     height: 20%;
     width: 60%;
-    background-color: button_colors.$button-creation-chat-color;
+    background-color: button_colors.$button-action-chat-color;
 
     .button-name {
         top: 34%;
         left: 38%;
         font-size: large;
         font-weight: 600;
-        color: button_colors.$button-creation-text-color;
+        color: button_colors.$button-action-text-color;
+    }
+}
+
+.button-del-yes-chat {
+    top: 70%;
+    left: 5%;
+    height: 20%;
+    width: 30%;
+    background-color: button_colors.$button-action-chat-color;
+
+    .button-name {
+        top: 35%;
+        left: 40%;
+        font-size: large;
+        font-weight: 600;
+        color: button_colors.$button-action-text-color;
+    }
+}
+
+.button-del-no-chat {
+    top: 70%;
+    right: 15%;
+    height: 20%;
+    width: 30%;
+    background-color: button_colors.$button-action-chat-color;
+
+    .button-name {
+        top: 35%;
+        left: 40%;
+        font-size: large;
+        font-weight: 600;
+        color: button_colors.$button-action-text-color;
     }
 }
