--- a/src/views/components/chatCreationWindow/chatCreationWindow.css
+++ b/src/views/components/chatCreationWindow/chatCreationWindow.css
@@ -1,10 +1,10 @@
 .chat-creation-window {
   display: none;
   position: relative;
-  top: -55%;
+  top: 0%;
   left: 190%;
   height: 40%;
-  width: 130%;
+  width: 270%;
   border-radius: 5%;
   background-color: #d9d9d9;
 }
@@ -12,6 +12,15 @@
   top: 10%;
   left: 42%;
   font-size: large;
+}
+.chat-creation-window .add-user-window-label {
+  top: 10%;
+  left: 34%;
+  font-size: large;
+}
+
+.add-user-window {
+  top: 10%;
 }
 
 /*# sourceMappingURL=chatCreationWindow.css.map */
