--- a/src/views/components/clickableText/clickableText.css
+++ b/src/views/components/clickableText/clickableText.css
@@ -7,8 +7,21 @@
 
 .create-chat-text {
   font-size: 20px;
-  top: 570px;
-  left: 890px;
+  top: 55%;
+  left: 63%;
+}
+
+.delete-chat-text {
+  font-size: 20px;
+  top: 55%;
+  left: 90%;
+  color: red;
+}
+
+.add-user-text {
+  font-size: 20px;
+  top: 20%;
+  left: 83%;
 }
 
 /*# sourceMappingURL=clickableText.css.map */
