--- a/src/views/components/clickableText/clickableText.scss
+++ b/src/views/components/clickableText/clickableText.scss
@@ -1,3 +1,5 @@
+@use './colors/colors';
+
 .clickable-text {
     font-size: 10px;
     top: 20px;
@@ -7,6 +9,19 @@
 
 .create-chat-text {
     font-size: 20px;
-    top: 570px;
-    left: 890px;
+    top: 55%;
+    left: 63%;
+}
+
+.delete-chat-text {
+    font-size: 20px;
+    top: 55%;
+    left: 90%;
+    color: colors.$delete-color;
+}
+
+.add-user-text {
+    font-size: 20px;
+    top: 20%;
+    left: 83%;
 }
