--- a/src/views/components/button/button.scss
+++ b/src/views/components/button/button.scss
@@ -50,14 +50,22 @@ button {
     height: 20%;
     width: 60%;
     background-color: button_colors.$button-action-chat-color;
+}
 
-    .button-name {
-        top: 34%;
-        left: 38%;
-        font-size: large;
-        font-weight: 600;
-        color: button_colors.$button-action-text-color;
-    }
+.button-creation-name {
+    top: 34%;
+    left: 35%;
+    font-size: large;
+    font-weight: 600;
+    color: button_colors.$button-action-text-color;
+}
+
+.button-add-user-chat {
+    top: 70%;
+    left: 13%;
+    height: 20%;
+    width: 60%;
+    background-color: button_colors.$button-action-chat-color;
 }
 
 .button-del-yes-chat {
