add ws functional

--- a/src/views/components/button/button.scss
+++ b/src/views/components/button/button.scss
@@ -10,6 +10,7 @@
     height: 47px;
     border-radius: 50%;
     border: 1px solid button_colors.$button-border-color;
+    cursor: pointer;
 }
 
 .button-save {
