--- a/src/views/components/message/message.css
+++ b/src/views/components/message/message.css
@@ -1,12 +1,14 @@
 .msg-in-chat {
   display: block;
-  position: absolute;
-  top: 300px;
-  left: 500px;
-  height: 20px;
-  width: 70px;
+  position: relative;
+  top: 90%;
+  left: 65%;
+  height: 20%;
+  width: 30%;
+  margin-top: 0.5%;
   border-radius: 20px;
   font-size: 20px;
+  text-align: center;
   background-color: #d9d9d9;
 }
 
