--- a/src/views/components/message/message.css
+++ b/src/views/components/message/message.css
@@ -10,6 +10,11 @@
   font-size: 20px;
   text-align: center;
   background-color: #d9d9d9;
+  overflow: hidden;
+}
+
+.other-user-msg {
+  left: 3%;
 }
 
 /*# sourceMappingURL=message.css.map */
