--- a/src/views/components/message/message.scss
+++ b/src/views/components/message/message.scss
@@ -12,4 +12,9 @@
     font-size: 20px;
     text-align: center;
     background-color: msg_colors.$msg-color;
+    overflow: hidden;
+}
+
+.other-user-msg {
+    left: 3%;
 }
