--- a/src/views/components/button/button.css
+++ b/src/views/components/button/button.css
@@ -87,6 +87,7 @@ button {
   height: 20%;
   width: 30%;
   background-color: gray;
+  cursor: pointer;
 }
 .button-del-no-chat .button-name {
   top: 35%;
@@ -94,6 +95,18 @@ button {
   font-size: large;
   font-weight: 600;
   color: white;
+}
+
+.close-button {
+  top: 2%;
+  left: 82%;
+  width: 8%;
+  background-color: #d9d9d9;
+}
+.close-button .button-name {
+  top: 20%;
+  left: 37%;
+  font-size: 30px;
 }
 
 /*# sourceMappingURL=button.css.map */
