--- a/src/views/components/chatCreationWindow/chatCreationWindow.scss
+++ b/src/views/components/chatCreationWindow/chatCreationWindow.scss
@@ -3,12 +3,14 @@
 .chat-creation-window {
     display: none;
     position: relative;
-    top: 0%;
-    left: 190%;
-    height: 40%;
-    width: 270%;
+    margin-top: 20%;
+    left: 30%;
+    height: 250%;
+    width: 50%;
     border-radius: 5%;
     background-color: $window-color;
+    filter: brightness(0.9);
+    z-index: 3;
 
     .chat-creation-text {
         top: 10%;
