--- a/src/views/components/chatDeleteWindow/chatDeleteWindow.css
+++ b/src/views/components/chatDeleteWindow/chatDeleteWindow.css
@@ -1,12 +1,14 @@
 .chat-delete-window {
   display: none;
-  position: relative;
-  top: 20%;
-  left: 190%;
-  height: 40%;
-  width: 130%;
+  position: absolute;
+  top: 220%;
+  left: 30%;
+  height: 250%;
+  width: 50%;
   border-radius: 5%;
   background-color: #d9d9d9;
+  z-index: 3;
+  filter: brightness(0.9);
 }
 .chat-delete-window .delete-text {
   top: 30%;
