--- a/src/views/components/message/message.scss
+++ b/src/views/components/message/message.scss
@@ -5,8 +5,10 @@
     position: relative;
     top: 90%;
     left: 65%;
-    height: 20%;
-    width: 30%;
+    min-height: 10%;
+    max-height: max-content;
+    min-width: 20%;
+    max-width: max-content;
     margin-top: 0.5%;
     border-radius: 20px;
     font-size: 20px;
