fix styles for creation chat and msgs

--- a/src/views/components/button/button.scss
+++ b/src/views/components/button/button.scss
@@ -107,6 +107,7 @@ button {
     left: 82%;
     width: 8%;
     background-color: button_colors.$window-color;
+    cursor: pointer;
 
     .button-name {
         top: 20%;
