--- a/src/views/components/clickableText/clickableText.css
+++ b/src/views/components/clickableText/clickableText.css
@@ -25,4 +25,10 @@
   left: 83%;
 }
 
+.delete-user-text {
+  font-size: 20px;
+  top: 37%;
+  left: 84%;
+}
+
 /*# sourceMappingURL=clickableText.css.map */
