--- a/src/views/components/button/button.css
+++ b/src/views/components/button/button.css
@@ -102,6 +102,7 @@ button {
   left: 82%;
   width: 8%;
   background-color: #d9d9d9;
+  cursor: pointer;
 }
 .close-button .button-name {
   top: 20%;
