--- a/src/views/components/message/message.css
+++ b/src/views/components/message/message.css
@@ -1,5 +1,8 @@
+.text-in-block {
+  margin-top: 3%;
+}
+
 .msg-in-chat {
-  display: block;
   position: relative;
   top: 90%;
   left: 65%;
@@ -10,6 +13,7 @@
   margin-top: 0.5%;
   border-radius: 20px;
   font-size: 20px;
+  vertical-align: middle;
   text-align: center;
   background-color: #d9d9d9;
   overflow: hidden;
