--- a/src/views/components/message/message.scss
+++ b/src/views/components/message/message.scss
@@ -1,7 +1,11 @@
 @use './colors/msg_colors';
 
+.text-in-block {
+    margin-top: 3%;
+}
+
 .msg-in-chat {
-    display: block;
+    // display: block;
     position: relative;
     top: 90%;
     left: 65%;
@@ -12,7 +16,9 @@
     margin-top: 0.5%;
     border-radius: 20px;
     font-size: 20px;
+    vertical-align: middle;
     text-align: center;
+    
     background-color: msg_colors.$msg-color;
     overflow: hidden;
 }
